# BraneScript

./: .clang-format  .gitignore  .llvmenv  CMakeLists.txt  Cargo.toml  README.md  ]  vcpkg.json
brane_script_cli/: Cargo.toml
brane_script_cli/src/: main.rs
brane_script_common/: Cargo.toml
brane_script_common/src/: lib.rs
brane_script_common/src/ir/: mod.rs
brane_script_compiler/: Cargo.toml  build.rs
brane_script_compiler/src/: document_context.rs  lib.rs  parsed_document.rs
brane_script_compiler/src/ast/: ast.rs  lowering.rs  mod.rs  nodes.rs  parser.rs
brane_script_compiler/src/compiler/: mod.rs
brane_script_compiler/src/errors/: console_emiter.rs  mod.rs
brane_script_compiler/src/hir/: hir.rs
brane_script_compiler/src/parser/: mod.rs  nodes.rs
brane_script_compiler/src/source/: mod.rs
brane_script_compiler/src/symbols/: mod.rs
brane_script_compiler/src/tokens/: lexer.rs  mod.rs  parse_state.rs  tokens.rs  tree.rs
brane_script_compiler_macro/: Cargo.toml
brane_script_compiler_macro/src/: lib.rs
brane_script_runtime/: Cargo.toml  build.rs
brane_script_runtime/src/: lib.rs
brane_script_runtime/src/backend/: mod.rs
brane_script_runtime/src/backend/brane_script_llvm_backend/: Cargo.toml
brane_script_runtime/src/backend/brane_script_llvm_backend/src/: lib.rs
brane_script_runtime/src/ir/: mod.rs
c++ source/: CMakeLists.txt
c++ source/cli/: CMakeLists.txt
c++ source/compiler/: compiler.cpp  compiler.h
c++ source/parser/: CMakeLists.txt  documentContext.cpp  documentContext.h  documentParser.cpp  documentParser.h
c++ source/runtime/: CMakeLists.txt
c++ source/runtime/backends/llvm/: CMakeLists.txt  llvmJitBackend.cpq~  llvmJitBackend.cpz~  llvmJitBackend.h
cli/: Cargo.toml
cli/src/: c_abi_tests.rs  main.rs
compiler/branec/: Cargo.toml
compiler/branec/macros/: Cargo.toml
compiler/branec/macros/src/: lib.rs
compiler/branec/src/: intrinsics.rs  lib.rs  passes.rs
compiler/branec/src/hir_lowering/: mod.rs
compiler/branec/src/stdlib/: mod.rs
compiler/branec/src/types/: mod.rs
compiler/branec_ast/: Cargo.toml
compiler/branec_ast/src/: ast.rs
compiler/branec_ast_lowering/: Cargo.toml
compiler/branec_ast_lowering/src/: old_ast_lowering.rs
compiler/branec_emitter/: Cargo.toml
compiler/branec_emitter/src/: console_emitter.rs  lib.rs
compiler/branec_hir/: Cargo.toml
compiler/branec_hir/src/: hir.rs  lib.rs  queries.rs
compiler/branec_parser/: Cargo.toml
compiler/branec_parser/src/: ast.rs  lib.rs
compiler/branec_source/: Cargo.toml
compiler/branec_source/src/: lib.rs
compiler/branec_symbols/: Cargo.toml
compiler/branec_symbols/src/: lib.rs
compiler/branec_tokens/: Cargo.toml
compiler/branec_tokens/src/: lexer.rs  lib.rs  tokens.rs  tree.rs
exampleScripts/: loop.bscript  match_test.bscript  nodes.bscript  target-grammar.bscript  test.bscript  test_final.bscript  vec-loop.bscript
runtime/brane_backend/: Cargo.toml
runtime/brane_backend/src/: lib.rs
runtime/brane_backend_cranelift/: Cargo.toml
runtime/brane_backend_cranelift/src/: lib.rs
runtime/brane_backend_llvm/: Cargo.toml
runtime/brane_backend_llvm/src/: lib.rs
runtime/brane_core/: Cargo.toml  build.rs
runtime/brane_core/src/: lib.rs
runtime/brane_core/src/ir/: mod.rs  parser.rs
runtime/brane_core/src/memory/: mod.rs
runtime/brane_core/src/runtime/: mod.rs
runtime/brane_core/src/sandbox/: mod.rs  unix.rs  win32.rs
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.h
src/ir/: CMakeLists.txt  ir.h  irTextSerializer.cpp  irTextSerializer.h
src/parser/: CMakeLists.txt  documentContext.cpp  documentContext.h  documentParser.cpp  documentParser.h
src/runtime/: runtime.h
src/runtime/backends/: jitBackend.h
src/runtime/backends/llvm/: llvmJitBackend.cpp
tests/: CMakeLists.txt  c_abi.bscript  object_function_calls.bscript
