[workspace]

resolver = "2"

members = [
    "cli", 
    "runtime/brane_core",
    "runtime/brane_backend",
    "runtime/brane_backend_llvm", 
    "compiler/branec_source", 
    "compiler/branec_symbols", 
    "compiler/branec_tokens", 
    "compiler/branec_parser", 
    "compiler/branec_ast", 
    "compiler/branec_ast_lowering",
    "compiler/branec_hir", 
    "compiler/branec_emitter", 
]

[workspace.dependencies]
anyhow = "1"
chumsky = "0.10.1"
serde = { version = "1.0.218", features = ["derive"] }
defer = "0.2.1"

