[workspace]

resolver = "2"

members = [
    "cli", 
    "runtime/brane_core",
    "runtime/brane_backend",
    "runtime/brane_backend_llvm", 
    "compiler/branec", 
    "compiler/branec_parser", 
]

[workspace.dependencies]
anyhow = "1"
chumsky = "0.10.1"
serde = { version = "1.0.218", features = ["derive"] }
defer = "0.2.1"

