[workspace]

resolver = "2"

members = [
    "cli", 
    "runtime/brane_core",
    "runtime/brane_backend",
    #"runtime/brane_backend_llvm", 
    "compiler/branec", 
    "compiler/branec_parser", 
    "compiler/branec_emitter",
    "compiler/branec_source"
, "runtime/brane_backend_cranelift"]


[workspace.dependencies]
anyhow = "1"
thiserror = "2.0.17"
chumsky = "0.10.1"
serde = { version = "1.0.218", features = ["derive"] }
defer = "0.2.1"


