[package]
name = "brane_script_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
brane_script_runtime = {path = "../brane_script_runtime"}
tree-sitter-branescript.workspace = true

anyhow.workspace = true
type-sitter = { version = "0.7.0", default-features = false }
annotate-snippets = "0.11.5"
defer = "0.2.1"

[build-dependencies]
tree-sitter-branescript.workspace = true
type-sitter-gen = "0.7.2" 

