[package]
name = "brane_script_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
brane_script_runtime = {path = "../brane_script_runtime"}
typed-arena = "2.0.2"
anstream = "0.6.18"
ouroboros = "0.18.5"
brane_script_compiler_macro = {path = "../brane_script_compiler_macro"}

anyhow.workspace = true
annotate-snippets = "0.11.5"
chumsky = "0.10.1"
scopeguard = "1.2.0"

