[package]
name = "branec_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.31", features = ["derive"] }

branec = {path = "../compiler/branec" }
brane_core = {path = "../runtime/brane_core" }
branec_source = {path = "../compiler/branec_source" }
branec_emitter = {path = "../compiler/branec_emitter" }
brane_backend_cranelift = { path = "../runtime/brane_backend_cranelift/" }
cranelift-jit = "0.125.2"
cranelift-module = "0.125.2"
