[package]
name = "brane_backend_cranelift"
version = "0.1.0"
edition = "2024"

[dependencies]
brane_backend = { path = "../brane_backend/" }
brane_core = { path = "../brane_core/" }
anyhow.workspace = true
cranelift-codegen = { version = "0.122.0", features = ["disas"] }
cranelift-native = "0.122.0"
cranelift-jit = "0.122.0"
cranelift-frontend = "0.122.0"
cranelift-module = "0.122.0"
